
	* src/parsmart.cpp: Add protection against double-free
	bugs. Assign pointers to NULL. Addresses bug reported from 
	Avogaro PR#1897745.

	* src/forcefields/forcefieldghemical.cpp: Fix problem with VDW
	gradients -- typo of "kb" instead of "ka."

	* src/forcefields/*.cpp: Remove many (but not all) compile
	warnings from GCC. 

	* src/kekulize.cpp, src/chains.cpp: Ditto.

2008-03-05  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Added write function.

2008-03-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/chains.cpp (DeleteByteCode): Add protection against double-free
	bugs in chains.cpp. Assign pointers to NULL.

2008-03-04  Daniel Leidert <daniel.leidert@wgdd.de>

	* doc/babel.1: Fixed unkown RE macro.

2008-03-04  Noel O'Boyle <baoilleach@gmail.com>
	
	* src/formats/xml/Makefile.am: Only compile cmlformat.cpp if
	HAVE_SHARED_POINTER is true

2008-03-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/math/vector3.h, include/openbabel/base.h,
	include/openbabel/residue.h: Fixes for compiling with GCC
	-pedantic flag, thanks to Daniel Leidert.

	* tests/* : New tests for UFF, Ghemical and MMFF94 unit
	tests. Compares energies and validates gradients. Still appear to
	be some small gradient errors (although these may be due to
	numerical instability.)

	* src/forcefields/forcefield*.cpp (ValidateGradients): Return
	false when gradient errors are > 5.0% anywhere along the line.

2008-03-03  Noel O'Boyle <baoilleach@gmail.com>
	
	* tests/Makefile.am, files/3d.head.2.cml, tests/cmlreadfile.cpp,
	test/wrapper.sh: Add tests for CML scripting support

2008-03-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp: Ensure files match .so exactly. Prevents
	errors when looking for .so.dSYM files.

	* src/formats/MCDLformat.cpp: Fix GCC compile error.

	* src/formats/Makefile.am, src/formats/Makefile.in: Build rsmi and
	MCDL formats.
